--- a/dsh/style.css
+++ b/dsh/style.css
@@ -6,3 +6,28 @@
 html, body {
 	font-family: Inconsolata;
 }
+
+.navbar {
+	background-color: #010c1b;
+	overflow: hidden;
+}
+
+.navbar a {
+	float: left;
+	display: block;
+	color: #FEB913;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+.navbar a:hover {
+	background-color: #011d3e;
+	color: #fed268;
+}
+
+.navbar a.active {
+	background-color: #012c61;
+	color: #fee5a9;
+}
